2000-10-13  Lauris Kaplinski  <lauris@helixcode.com>

	* htmltokenizer.c: Renamed g_unichar_to_utf8 to html_unichar_to_utf8

2000-10-13  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-rule.c (html_rule_set): new function for setting
	rule parameters

2000-10-12  Larry Ewing  <lewing@helixcode.com>

	* htmlclueflow.c (save_plain): wrap the text contained within the
	clue.
	(plain_padding): helper function to determine line padding
	(string_append_len): helper funtion to encode write lengths of
	text.

	* htmlclue.c (save_plain): add arg.

	* htmltext.c (save_plain): add arg.

	* htmlobject.h: add width args to save_plain functions.

	* htmlobject.c (save_plain): add requested_width arg.
	(html_object_save_plain): add arg.

	* htmlengine-save.h: add prototype for save buffer functions.

	* htmlengine-save.c: added functions to create a save buffer to
	hold text before wrapping.
	
2000-10-12  Radek Doulik  <rodo@helixcode.com>

	* htmlrule.c (copy): copy also length and size

2000-10-11  Radek Doulik  <rodo@helixcode.com>

	* Makefile.am (CFLAGS): removed pspell flags
	(testgtkhtml_LDADD): removed pspell libs

2000-10-11  Larry Ewing  <lewing@helixcode.com>

	* htmlengine-edit-selection-updater.c (extend_selection): handle
	the NULL obj here as well.

2000-10-10  Larry Ewing  <lewing@helixcode.com>

	* htmlengine-edit-selection-updater.c (extend_selection): make
	sure tht we deal gracefully when next/prev leaf is NULL.

	* htmlobject.c (destroy): add code to poison destroyed memory.

2000-10-10  Radek Doulik  <rodo@helixcode.com>

	* new spell checking API GtkHTMLEditSpellAPI, it's here as I don't
	want to make libgtkhtml depend on Bonobo, just editor component
	which will use this API

	* removed pspell checking #ifdef's

	* gtkhtml-private.h: like below

	* gtkhtml.c (set_fonts_idle): test for GTKHTML_HAVE_GCONF instead
	of PSPELL which was mistaken
	(set_fonts): likewise

	* htmltable.c (expand_columns): use g_renew
	(expand_rows): likewise